fix: css fix to have scroll on overflow

--- a/src/components/ChatBody/ChatBody.css
+++ b/src/components/ChatBody/ChatBody.css
@@ -17,6 +17,8 @@
 
 .chat-body-text { 
   padding:20px;
+  height: 700px;
+  overflow: scroll;
 }
 
 .chat-body-avatar img {
